[tool.poetry]
name = "hardwario-chester"
version = "1.0.0"
description = "HARDWARIO CHESTER"
authors = ["Karel Blavka <karel.blavka@hardwario.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hardwario/py-hardwario-chester"
repository = "https://github.com/hardwario/py-hardwario-chester"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console"
]

packages = [
    { include = "hardwario", from = "src" },
]

exclude = [
    "**/*.pyc",
    "**/*.pyi",
]

include = [
    "LICENSE",
]

[tool.poetry.scripts]
chester = "hardwario.chester.cli:main"

[tool.poetry.dependencies]
python = ">=3.7, <4"
click = "^8.1.3"
pynrfjprog = "=10.19.0"
hardwario-common = "^1.8.0"
pylink-square = "^0.12.0"
prompt-toolkit = "=3.0.37"
pyperclip = "^1.8.2"
loguru = "^0.6.0"
requests = "^2.28.2"
docker = "^6.0.1"
Pygments = "^2.14.0"

[tool.poetry.dev-dependencies]
#hardwario-common = {path = "../py-hardwario-common", develop = true}
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
